// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSeverity component tests severity - danger 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff0f0",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#db3424",
        "fontFamily": "TT Fellows",
        "fontSize": 14,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - info 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#f0f9ff",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#1e76cd",
        "fontFamily": "TT Fellows",
        "fontSize": 14,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - success 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#f0fff3",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#1dc831",
        "fontFamily": "TT Fellows",
        "fontSize": 14,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - warning 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fff9f0",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#dc9710",
        "fontFamily": "TT Fellows",
        "fontSize": 14,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;
